Revision history for Perl extension DBIx::Skinny

0.0723
   2010-10-XX
        - MOD : more infomation for no selected column error.

0.0722
   2010-10-20
        - ADD : suppress_row_objects mode. more faster.

0.0721
   2010-09-22
        - FIXED : Fixed pod was broken.(thanks tokuhirom)
        - FIXED : Makefile.PL

0.0720
   2010-08-20
        - FIXED : Fixed bug in using "IN" operator in "DELETE/UPDATE" statement (thanks magicalhat)

0.0719
   2010-08-19
        - FIXED : document.
        - FIXED : inc/Test/SharedFork.pm

0.0718
   2010-08-18
        - MOD : some documetn. see) http://d.hatena.ne.jp/tokuhirom/20100815/1281886033

0.0717
   2010-08-11
        - FIXED : fixed bug for data2itr pass object-array (thanks nihen)

0.0716
   2010-08-10
        - FIXED : _guess_table_name support multiline sql (thanks nihen)
        - ADD   : Added position accessor to Iterator (thanks nihen)

0.0715
   2010-07-26
        - MOD : do method can take \%attr, @bind_params ( It's the same as DBI's "do" behavior ) (thanks tokuhirom)
        - MOD : single/search method can select..for update.

0.0714
   2010-07-06
        - MOD : The setting method of Schema#pk is enhanced bug fixed. (thanks gfx)

0.0713
   2010-07-06
        - MOD : The setting method of Schema#pk is enhanced. (thanks tokuhirom)

0.0712
   2010-06-29
        - MOD : added method search_rs. Return DBIx::Skinny::SQL's object. (thanks walf443)
        - MOD : add fork safe dbh handling (thanks nihen)
        - ADD : DBIx::Skinny::SQL's docs (thanks walf443)
        - ADD : add_complex_where's test (thanks walf443)
        - ADD : DBIx::Skinny::Manual::EN (thanks metaperl)
        - FIXED : t/218_transaction_mysql.t's typo (thanks nihen)

0.0711
   2010-05-16
        - FIXED : typo s/realy/really/ (thanks azumakuniyuki)
        - FIXED : typo s/potition/position/g (thanks azumakuniyuki)
        - FIXED : bind_param bug fixed.

0.0710
   2010-04-22
        - MOD : support bind_param.