@@ -3,6 +3,7 @@ Revision history for Perl extension DBIx::Skinny
 0.0723
    2010-10-XX
         - MOD : more infomation for no selected column error.
+        - MOD : no dependent Test::Output (thanks yibe)
 
 0.0722
    2010-10-20
